<resources>
    <string name="app_name">My Notes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Courses</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_note_keep">NoteKeep</string>
    <string name="title_activity_note_keeper">NoteKeeper</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="menu_import">Notes</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_communication">Communication</string>
    <string name="menu_send">Send</string>
    <string name="menu_share">Share</string>
    <string name="note_title_hint">Note title</string>
    <string name="note_text_hint">Note text</string>
    <string name="nav_share_message">Share</string>
    <string name="nav_send_message">Send</string>

</resources>