<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_gallery" />

    </group>
    <item android:title="@string/menu_communication">
        <menu>
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/action_send"
                android:icon="@drawable/ic_send"
                android:title="@string/menu_send" />
        </menu>

        </item>
</menu>